altered class name to prevent overlap

--- a/frontend/src/components/SpotImagesForm/SpotImagesForm.css
+++ b/frontend/src/components/SpotImagesForm/SpotImagesForm.css
@@ -1,4 +1,4 @@
-.update-disabled {
+.update-image-disabled {
     width: 40%;
     padding: 15px;
     border: 5px groove #CF5300;
